--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
     "cra-template": "1.2.0",
+    "crypto-js": "^4.2.0",
     "execjs": "^1.0.7",
     "next-themes": "^0.4.4",
+    "node-forge": "^1.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
